--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,4 @@ notifications:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 #  - julia -e 'Pkg.clone(pwd()); Pkg.build("Pyramids"); Pkg.test("Pyramids"; coverage=true)'
 after_success:
-  - if [ $TRAVIS_JULIA_VERSION = "0.4" ] && [ $TRAVIS_OS_NAME = "linux" ]; then
-       julia -e 'cd(Pkg.dir("Pyramids")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
-    fi
+  - julia -e 'cd(Pkg.dir("Pyramids")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
